--- a/Dockerfile-qjs
+++ b/Dockerfile-qjs
@@ -1,11 +1,2 @@
-FROM nnurphy/deb
-
-RUN version=2019-07-28 \
-  ; wget -O- https://bellard.org/quickjs/quickjs-${version}.tar.xz \
-        | tar Jxf - \
-  ; cd quickjs-${version} \
-  ; sed -i 's!CONFIG_M32=y!!' Makefile \
-  ; make \
-  ; make install \
-  ; cd .. \
-  ; rm -rf quickjs-${version}
+FROM nnurphy/qjs:deb-all as q
+COPY --from=q /usr/local/bin/qjsbn /usr/local/bin/qjs
