--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -46,7 +46,7 @@ set -g status-interval 1 # 状态栏刷新时间
 set -g status-justify left # 状态栏列表左对齐
 setw -g monitor-activity on # 非当前窗口有内容更新时在状态栏通知
 
-set -g status-style "bg=#3e7110, fg=white" # 状态栏前景背景色
+set -g status-style "bg=#333333, fg=white" # 状态栏前景背景色
 
 set -g status-left "#[bg=#FF661D] ❐ #S " # 状态栏左侧内容
 #set -g status-right 'Continuum status: #{continuum_status}' # 状态栏右侧内容
