--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -12,7 +12,7 @@ bind - splitw -v -c '#{pane_current_path}' # 垂直方向新增面板
 unbind %
 bind \ splitw -h -c '#{pane_current_path}' # 水平方向新增面板
 
-set-option -g mouse on
+set -g mouse on
 
 # Drag to re-order windows
 bind-key -n MouseDrag1Status swap-window -t=
@@ -69,6 +69,7 @@ set -g default-terminal "tmux-256color"
 setw -g mode-keys vi
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+bind -T copy-mode-vi r send-keys -X rectangle-toggle
 
 # buffer缓存复制到Linux系统粘贴板
 bind C-c run " tmux save-buffer - | xclip -i -sel clipboard"
