--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,3 +1,5 @@
+set -g default-terminal "screen-256color"
+
 set -g prefix `
 unbind C-b
 bind-key ` send-prefix
@@ -51,16 +53,18 @@ set -g status-right '%y-%m-%d[%w]%H:%M:%S' # 状态栏右侧内容
 set -g status-left-length 300 # 状态栏左边长度300
 set -g status-right-length 500 # 状态栏左边长度500
 
-set -wg window-status-format " #I:#{pane_current_path}[#W] "
-set -wg window-status-current-format " #I:#{pane_current_path}[#W]#F "
+
+
+
+set -wg window-status-format ' #[fg=white,bold]#I:#[fg=green]#(p="#{d:pane_current_path}"; echo ${p//\//\\n} | cut -c-1 | paste -s -d"/" -)/#{b:pane_current_path}#[fg=blue][#W]#[fg=white] '
+set -wg window-status-current-format ' #[fg=white,bold]#I:#[fg=green]#{pane_current_path}#[fg=blue][#W]#[fg=white]#F '
+
 set -wg window-status-separator ""
 set -wg window-status-current-style "bg=black" # 状态栏当前窗口名称的样式
 set -wg window-status-last-style "fg=yellow" # 状态栏最后一个窗口名称的样式
 
 setw -g monitor-activity on # 非当前窗口有内容更新时在状态栏通知
 set -g message-style "bg=#202529, fg=#91A8BA" # 指定消息通知的前景、后景色
-
-set -g default-terminal "tmux-256color"
 
 # setw -g automatic-rename off
 # setw -g allow-rename off
