--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -54,9 +54,7 @@ set -g status-left-length 300 # 状态栏左边长度300
 set -g status-right-length 500 # 状态栏左边长度500
 
 
-
-
-set -wg window-status-format ' #[fg=white,bold]#I:#[fg=green]#(p="#{d:pane_current_path}"; printf ${p//\//\\n} | cut -c-1 | paste -s -d"/" -)/#{b:pane_current_path}#[fg=blue][#W]#[fg=white] '
+set -wg window-status-format ' #[fg=white,bold]#I:#[fg=green]#{b:pane_current_path}#[fg=blue][#W]#[fg=white] '
 set -wg window-status-current-format ' #[fg=white,bold]#I:#[fg=green]#{pane_current_path}#[fg=blue][#W]#[fg=white]#F '
 
 set -wg window-status-separator ""
