tmux base-index 1

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,4 +1,6 @@
 set -g default-terminal "screen-256color"
+set -g base-index 1
+setw -g pane-base-index 1
 
 set -g prefix `
 unbind C-b
@@ -54,8 +56,8 @@ set -g status-left-length 300 # 状态栏左边长度300
 set -g status-right-length 500 # 状态栏左边长度500
 
 
-set -wg window-status-format ' #[fg=white,bold]#I:#[fg=green]#{b:pane_current_path}#[fg=blue][#W]#[fg=white] '
-set -wg window-status-current-format ' #[fg=white,bold]#I:#[fg=green]#{pane_current_path}#[fg=blue][#W]#[fg=white]#F '
+set -wg window-status-format ' #[fg=white,bold]#I:#[fg=green]#{pane_current_path}#[fg=blue][#W]#[fg=white] '
+set -wg window-status-current-format ' #[fg=white,bold]#I:#[fg=cyan]#{pane_current_path}#[fg=blue][#W]#[fg=white]#F '
 
 set -wg window-status-separator ""
 set -wg window-status-current-style "bg=black" # 状态栏当前窗口名称的样式
